Implement Basic History CURD handler and swagger
